Final version for presentation

--- a/interactive_draft/interactive_draft.html
+++ b/interactive_draft/interactive_draft.html
@@ -24,9 +24,11 @@
     <!-- buttons -->
      <div class="buttons">
       <select id="ageButton"></select>
+    </div>
+    <div class = "buttons2">
       <select id="typeButton"></select>
       <select id="incomeButton"></select>
-     </div>
+    </div>
 
 
 
