--- a/www/index.html
+++ b/www/index.html
@@ -868,7 +868,7 @@
 
 <footer>
   <strong>Notes:</strong> <br>
-  All data is from the 2023 American Community Survey (ACS), accessed through <a href="https://data.census.gov/">data.census.gov</a>.<br>
+  All data is from the 2023 American Community Survey (ACS), accessed through <a href="data.census.gov/">data.census.gov</a>.<br>
    &nbsp; Tables B27018-B27019 for income, B27001 for race/ethnicity, and B27002-B27009 for insurance type. <br>
   Poverty thresholds are determined for each household based on size of family, number of related
   children, and age of householder. <br>
